alcs-frontend/src/app/features/application/post-decision/post-decision.component.scss
@use '../../../../styles/colors';

.post-decision-header {
  margin: 24px 0 !important;
  display: flex;
  align-items: center;

  .icon {
    margin-left: 8px;
    height: 20px;
    width: 20px;
    font-size: 20px;
  }
}

.post-decision {
  margin: 24px 0;
  position: relative;
  padding: 32px;
  box-shadow: 0 2px 8px 1px rgba(0, 0, 0, 0.25);
}

.no-decisions {
  margin-top: 16px;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: colors.$grey-light;
  height: 72px;
}

h3 {
  margin-bottom: 24px !important;
}

section {
  margin-bottom: 64px;
}

.decision:last-child {
  padding: 32px;
}

.recon-label {
  font-size: 11px;
  position: absolute;
  left: 0;
  top: 0;
  height: 32px;
  padding: 6px 12px;
  color: colors.$white;
  background: colors.$grey-dark;
  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.25);
  border-radius: 4px 0 10px;
}

.decision-menu {
  position: absolute;
  top: 0;
  right: 0;
  height: 36px;

  box-shadow: -1px 1px 4px rgba(0, 0, 0, 0.25);
  border-radius: 0 4px 0 10px;

  &.recon {
    background: colors.$accent-color;
  }

  &.modification {
    background: colors.$secondary-color-dark;
  }

  button {
    color: colors.$white;
    width: 36px;
    height: 36px;
    line-height: 36px;
  }

  mat-icon {
    position: absolute;
    top: 8px;
    left: 8px;
    font-size: 21px;
    width: 20px;
    height: 36px;
  }
}

.decision-content {
  margin-top: 16px;
  margin-bottom: 32px;
  display: grid;
  grid-template-columns: 1fr 1fr 100px;
  grid-row-gap: 24px;

  .subheading2 {
    margin-bottom: 6px !important;
  }

  & > div {
    font-size: 16px;
  }
}

